# pluginTools

./: README.md  __init__.py  plugin.py  pluginSystem.py
tests/: README.md  make.bat  pyproject.toml
tests/src/testPluginSystem/: __init__.py  __main__.py  mary.py  paul.py  personPlugin.py  peter.py  testPluginSystem.py
