[project]
name="testPluginSystem"
version="1.0.0.0"
description = "test my plugin system"
readme="README.md"
requires-python = ">= 3.8"
authors = [{name = "KC Eilander"}]
license = "MIT"
license-files = ["LICENSE"]
keywords=[]

[project.urls]
Homepage = "https://github.com/TheHeadlessSourceMan/pluginTools"

[project.entry-points."testPluginSystem.person_plugin"]
peter='peter.Peter'
